--- a/PARTIALS/modal_cart.ejs
+++ b/PARTIALS/modal_cart.ejs
@@ -1,32 +1,41 @@
 <!-- Modal - About -->
 <div class = "modal" id = "cart" tabindex = "-1" role = "dialog" aria-labelledby = "cart"><!-- open modal -->
-  <div class = "modal-dialog" role = "document">
+  <div class = "modal-dialog modal-lg" role = "document">
     <div class = "modal-content">
 
       <div class = "modal-header"><!-- open modal-head -->
 
         <button type = "button" class = "close" data-dismiss = "modal" aria-label = "Close"><span aria-hidden = "true">&times;</span></button>
-        <h4 class = "modal-title logo" id = "myModalLabel">
-          cheap<sub>LIKE</sub>us<br/><br/>
+        <h4 id = "myModalLabel">
+          Shopping Cart
         </h4>
 
       </div><!-- close modal-head -->
 
       <div class = "modal-body"><!-- open modal-body -->
                     
-        <div>
-          <p class = "about_text">
-          <br/>
-            This is a project for University of Florida's Fall 2015 CIS4301:
-            Information and Database Systems course. The goal of this project 
-            is to develop a simple online store web app incorporating 
-            the database management skills learned in the course as well as web 
-            development skill learned during independent study.
-            <br/>
-          </p>
-        </div>
+        <ul class = "list-group" id="show-cart">
+
+        </ul>
+        <div><hr></div>
+        <div>You have <span id="count-cart">X</span> items in your cart</div>
+        <div>Total Cart:$<span id="total-cart"></span></div>
 
       </div><!-- close modal-body -->
+
+      <div class = "modal-footer"><!-- open modal-footer -->
+
+        <div class = "form-group">
+            <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
+          </div>
+          <div class = "form-group">
+            <input type = "password" name = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
+          </div>
+          <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send">Make Purchase</button>
+        </form>
+
+      </div><!-- close modal-footer -->
+
 
     </div>
   </div>
