--- a/views/admin_alert.ejs
+++ b/views/admin_alert.ejs
@@ -77,7 +77,8 @@
       </div>
     </div>
 
-    <% include ../PARTIALS/scripts %>
+    <% include ../PARTIALS/scripts_common %>
+    <% include ../PARTIALS/scripts_admin_alert %>
 
   </body>
 
