--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -67,7 +67,8 @@
       </div>
     </div>
 
-    <% include ../PARTIALS/scripts %>
+    <% include ../PARTIALS/scripts_common %>
+    <% include ../PARTIALS/scripts_shopping_cart %>
 
   </body>
 
