--- a/views/index_alert.ejs
+++ b/views/index_alert.ejs
@@ -148,33 +148,8 @@
       </div>
     </div>
 
-    <% include ../PARTIALS/scripts %>
-
-  </body>
-
-<!------------------------------------------------------------------------------
--                                                                              -
--                                                           Smith, Phillip     -
--                                                  smith.phillip.m@ufl.edu     -
--                                                                              -
--                                                             Fry, Nicolas     -
--                                                    nicolascoding@ufl.edu     -
--                                                                              -
-------------------------------------------------------------------------------->
-
-</html>
-
-          </div>
-
-          <div class = "mastfoot">
-              <% include ../PARTIALS/footer %>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <% include ../PARTIALS/scripts %>
+    <% include ../PARTIALS/scripts_common %>
+    <% include ../PARTIALS/scripts_index_alert %>
 
   </body>
 
