--- a/PARTIALS/modal_edit_account.ejs
+++ b/PARTIALS/modal_edit_account.ejs
@@ -133,7 +133,7 @@
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
                   <div class = "form-group">
-                    <input type = "password" name = "email" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
+                    <input type = "password" name = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
                   </div>
                   <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send">Submit</button>
                 </form>
