--- a/PARTIALS/modal_modify_tables.ejs
+++ b/PARTIALS/modal_modify_tables.ejs
@@ -169,14 +169,14 @@
             <div id="del-order" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
 
-                <form>
+                <form role="form" action = "/admin/deleteOrder" method = "post">
                   <div class = "well well-sm">
                     Deleting from Order Table
                   </div>
                   <div class="form-group">
-                    <input type="orderID" class="form-control input-lg" id="exampleInputEmail1" placeholder="orderID">
+                    <input type="orderID" name="orderID" class="form-control input-lg" id="exampleInputEmail1" placeholder="orderID">
                   </div>
-                  <button type="submit" class="btn btn-default btn-block btn-lg">Delete</button>
+                  <button type="submit" value="Send" class="btn btn-default btn-block btn-lg">Delete</button>
                 </form>
 
               </div>
@@ -263,17 +263,14 @@
             <div id="del-product" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
 
-                <form>
+                <form action = "/admin/deleteProd" method = "post">
                   <div class = "well well-sm">
                     Deleting from Product Table
                   </div>
                   <div class="form-group">
-                    <input type="productID" class="form-control input-lg" id="exampleInputEmail1" placeholder="productID">
+                    <input type="productID" name= "productID" class="form-control input-lg" id="exampleInputEmail1" placeholder="productID">
                   </div>
-                  <div class="form-group">
-                    <input type="name" class="form-control input-lg" id="exampleInputEmail1" placeholder="name">
-                  </div>
-                  <button type="submit" class="btn btn-default btn-block btn-lg">Delete</button>
+                  <button type="submit" value="Send" class="btn btn-default btn-block btn-lg">Delete</button>
                 </form>
 
               </div>
