--- a/PARTIALS/scripts_admin_alert.ejs
+++ b/PARTIALS/scripts_admin_alert.ejs
@@ -1,1 +1,1 @@
-<script src = "/JS/admin_alert.js" type = "text/javascript"></script>
+<script src = "/admin_alert.js" type = "text/javascript"></script>
