--- a/PARTIALS/scripts_index_alert.ejs
+++ b/PARTIALS/scripts_index_alert.ejs
@@ -1,1 +1,1 @@
-<script src = "/JS/index_alert.js" type = "text/javascript"></script>
+<script src = "/index_alert.js" type = "text/javascript"></script>
