--- a/views/admin_alert.ejs
+++ b/views/admin_alert.ejs
@@ -57,14 +57,10 @@
 
           <div class = "inner cover">
 
-            <div class="alert alert-danger alert-dismissible fade in" role=alert>
-              <button type=button class=close data-dismiss=alert aria-label=Close><span aria-hidden=true>&times;</span></button> 
-              <h4>
-                <strong>Low Stock Alert!</strong>
-              </h4>
-              <p> 
-                Some Quantity is Low 
-              </p>
+            <div class="jumbotron">
+              <div class="container">
+                <h1>Admin Page</h1>
+              </div>
             </div>
 
           </div>
