--- a/views/index_alert.ejs
+++ b/views/index_alert.ejs
@@ -106,7 +106,7 @@
 <!-- Modals ------------------------------------------------------------------->
 
   <!-- Modal - Sign-In -->
-    <% include ../PARTIALS/modal_log_in %>
+    <% include ../PARTIALS/modal_log_in_alert %>
 
   <!-- Modal - Sign-Up -->
     <% include ../PARTIALS/modal_create_account %>
@@ -129,15 +129,6 @@
 
           <div class = "inner cover">
             <% include ../PARTIALS/main_search %>
-            <div class="alert alert-danger alert-dismissible fade in" role=alert>
-              <button type=button class=close data-dismiss=alert aria-label=Close><span aria-hidden=true>&times;</span></button> 
-              <h4>
-                <strong>Failed Login!</strong>
-              </h4>
-              <p> 
-                Email address or password incorrect. Please try again. 
-              </p>
-            </div>
           </div>
 
           <div class = "mastfoot">
