was able to push shopping cart to back end

--- a/PARTIALS/modal_cart.ejs
+++ b/PARTIALS/modal_cart.ejs
@@ -22,18 +22,17 @@
         <div>Total Cart:$<span id="total-cart"></span></div>
 
       </div><!-- close modal-body -->
-
-      <div class = "modal-footer"><!-- open modal-footer -->
+      
+      <!-- open modal-footer -->
+      <div class = "modal-footer" id= "end-cart">
 
         <div class = "form-group">
-            <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
-          </div>
-          <div class = "form-group">
-            <input type = "password" name = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
-          </div>
-          <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send">Make Purchase</button>
-        </form>
-
+            <input type = "email" name = "email" class = "form-control input-lg" id = "checkoutEmail" placeholder = "Enter your current email to make changes">
+        </div>
+        <div class = "form-group">
+            <input type = "password" name = "password" class = "form-control input-lg" id = "checkoutPassword" placeholder = "Enter your current password to make changes">
+        </div>
+        <button type = "submit" class = "submit-cart btn btn-default btn-block btn-lg" value = "Send">Make Purchase</button>
       </div><!-- close modal-footer -->
 
 
