--- a/PARTIALS/customer_results.ejs
+++ b/PARTIALS/customer_results.ejs
@@ -13,7 +13,7 @@
             <div class = "row">
 
               <div class = "col-xs-1 col-md-1">
-                <button type="button" class="btn btn-default add-to-cart" data-name="<%= row.name %>" data-price="<%= row.price %>" data-stock = "<%= row.stockquantity %>" data-pid = "<%= row.stockquantity %>" aria-label="Left Align">
+                <button type="button" class="btn btn-default add-to-cart" data-name="<%= row.name %>" data-price="<%= row.price %>" data-stock = "<%= row.stockquantity %>" data-pid = "<%= row.ProductID %>" aria-label="Left Align">
                   <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
                 </button>
               </div>              
@@ -29,6 +29,10 @@
               <div class = "col-xs-4 col-md-2 pull-right">
                 $ <%= row.price %>   
               </div>
+<!-- 
+              <div class = "col-xs-4 col-md-2 pull-right">
+                $ <%= row.stockquantity %>   
+              </div> -->
 
             </div> 
           </li>
