Final pass on the front end before project turn in. Minor style changes and bug fixes.

--- a/PARTIALS/customer_results.ejs
+++ b/PARTIALS/customer_results.ejs
@@ -18,21 +18,17 @@
                 </button>
               </div>              
 
-              <div class = "col-xs-5 col-md-3 pull-left">
+              <div class = "col-xs-5 col-md-3" id = "left">
                 <%= row.name %>
               </div>
 
-              <div class = "col-xs-8 col-md-6 pull-left">
+              <div class = "col-xs-8 col-md-6" id = "left">
                 <%= row.description %>
               </div>
 
-              <div class = "col-xs-4 col-md-2 pull-right">
+              <div class = "col-xs-4 col-md-2" id = "right">
                 $ <%= row.price %>   
               </div>
-<!-- 
-              <div class = "col-xs-4 col-md-2 pull-right">
-                $ <%= row.stockquantity %>   
-              </div> -->
 
             </div> 
           </li>
