--- a/PARTIALS/modal_contact_us.ejs
+++ b/PARTIALS/modal_contact_us.ejs
@@ -27,17 +27,17 @@
             <div id = "Phillip_Smith" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
               <div class = "list-group">
 
-                <ul class = "list-group">
-                  <li class = "list-group-item" id = "contact-list">
+                <ul class = "list-group" id = "results-list">
+                  <li class = "list-group-item" id = "left">
                     Undergraduate, UF-CISE
                   </li>
 
-                  <li class = "list-group-item" id = "contact-list">
+                  <li class = "list-group-item" id = "left">
                     smith.phillip.m@ufl.edu
                   </li>
 
-                  <li class = "list-group-item" id = "contact-list">
-                    Front-end development, some back-end, general design
+                  <li class = "list-group-item" id = "left">
+                    Front-end development, some back-end, general design, DBA
                   </li>
                 </ul>
 
@@ -57,54 +57,24 @@
             <div id = "Nicolas_Fry" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingTwo">
               <div class = "list-group">
 
-                <ul class = "list-group">
-                  <li class = "list-group-item" id = "contact-list">
+                <ul class = "list-group" id = "results-list">
+                  <li class = "list-group-item" id = "left">
                     Undergraduate, UF-CISE
                   </li>
 
-                  <li class = "list-group-item" id = "contact-list">
+                  <li class = "list-group-item" id = "left">
                     email@email.com
                   </li>
 
-                  <li class = "list-group-item" id = "contact-list">
-                    Back-end development, some front-end
+                  <li class = "list-group-item" id = "left">
+                    Back-end development, some front-end, DBA
                   </li>
                 </ul>
 
               </div>
             </div>
           </div>
-<!--
-          <div class = "panel panel-default">
-            <div class = "panel-heading" role = "tab" id = "headingThree">
-              <button class = "btn btn-default btn-block btn-lg collapsed btn-spc" data-toggle = "collapse" data-parent = "#accordion" href = "#George_Angeles" aria-pressed = "false" aria-expanded = "false" aria-controls = "George_Angeles">
-                <h4 class = "panel-title">
-                  George Angeles
-                </h4>
-              </button>
-            </div>
 
-            <div id = "George_Angeles" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingThree">
-              <div class = "list-group">
-
-                <ul class = "list-group">
-                  <li class = "list-group-item" id = "contact-list">
-                    BS Graphic Design - Some University
-                  </li>
-
-                  <li class = "list-group-item" id = "contact-list">
-                    email@email.com
-                  </li>
-
-                  <li class = "list-group-item" id = "contact-list">
-                    Contribution: Favicon, general graphic design
-                  </li>
-                </ul>
-
-              </div>
-            </div>
--->
-          </div>
         </div>
       </div><!-- close modal-body -->
 
