--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,7 +43,7 @@
   <% include ../PARTIALS/modal_modify_tables %>
 
   <!-- Modal - Create Account -->
-  <% include ../PARTIALS/modal_stock_alert %>
+  <% include ../PARTIALS/modal_alerts %>
 
 <!-- Cover -------------------------------------------------------------------->
 
