--- a/PARTIALS/modal_stock_alert.ejs
+++ b/PARTIALS/modal_stock_alert.ejs
@@ -13,16 +13,35 @@
       </div><!-- close modal-head -->
 
       <div class = "modal-body"><!-- open modal-body -->
-                    
-            <div class="alert alert-danger alert-dismissible fade in" role=alert>
-              <button type=button class=close data-dismiss=alert aria-label=Close><span aria-hidden=true>&times;</span></button> 
-              <h4>
-                <strong>Low Stock Alert!</strong>
-              </h4>
-              <p> 
-                Some Quantity is Low 
-              </p>
-            </div>
+        
+<div class="alert alert-danger alert-dismissible fade in" role=alert>
+         <h4>
+          <strong>Low Stock Alert!</strong>
+        </h4>     
+      
+        <ul class = "list-group">
+          <% data.forEach(function(row){ %>
+
+            <li class = "list-group-item">
+              <div class = "row">           
+
+                  <div class = "col-xs-5 col-md-2" id = "left">
+                    ID: <%= row.ProductID %>
+                  </div>
+
+                  <div class = "col-xs-8 col-md-6" id = "left">
+                    Name: <%= row.name %>
+                  </div>
+
+                  <div class = "col-xs-4 col-md-4" id = "left">
+                    Amount: <%= row.stockquantity %>   
+                  </div>
+
+              </div> 
+            </li>
+          <% }) %>
+        </ul>
+</div>
 
       </div><!-- close modal-body -->
 
