--- a/PARTIALS/modal_edit_account.ejs
+++ b/PARTIALS/modal_edit_account.ejs
@@ -29,7 +29,7 @@
             <div id = "edit-email" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
               <div class = "panel-body">
 
-                <form role = "form" action = "/login/" method = "post">
+                <form role = "form" action = "/user/changeEmail" method = "post">
                   <div class = "well well-sm">
                     Editing Email Address
                   </div>
@@ -43,7 +43,7 @@
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
                   <div class = "form-group">
-                    <input type = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
+                    <input type = "password" name = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
                   </div>
                   <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send">Submit</button>
                 </form>
@@ -65,12 +65,12 @@
             <div id = "edit-password" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
               <div class = "panel-body">
 
-                <form role = "form" action = "/login/" method = "post">
+                <form role = "form" action = "/user/changePassword" method = "post">
                   <div class = "well well-sm">
                     Editing Password
                   </div>
                   <div class = "form-group">
-                    <input type = "newpassword" name = "newpassword" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your new password here">
+                    <input type = "password" name = "newpassword" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your new password here">
                   </div>
                   <div>
                     <hr>
@@ -107,7 +107,7 @@
             <div id = "edit-address" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
               <div class = "panel-body">
 
-                <form role = "form" action = "/login/" method = "post">
+                <form role = "form" action = "/user/changeAddress" method = "post">
                   <div class = "well well-sm">
                     Editing Address
                   </div>
@@ -154,7 +154,7 @@
             <div id = "del-account" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
               <div class = "panel-body">
 
-                <form role = "form" action = "/login/" method = "post">
+                <form role = "form" action = "/user/deleteAccount" method = "post">
                   <div class = "form-group">
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
