Fixed a few bugs and did bonus

--- a/PARTIALS/customer_results.ejs
+++ b/PARTIALS/customer_results.ejs
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <form role = "form" action = "/req/guestItemsQueryBy" method = "post">
+    <form role = "form" action = "/req/customerItemsQueryBy" method = "post">
       <input class="hidden" name="sortby" value= "<%=sortby%>">
       <input class="hidden" name="query" value= "<%=query%>">
       <button type="Submit" class="btn btn-default btn-sm pull-right">Sort By <%= sortby%></button>
